# 1BA_CS_UA-GraphicsEngine

./: 2DLSystem.cpp  2DLSystem.h  3DLines.cpp  3DLines.h  CMakeLists.txt  CoordToPixel.cpp  CoordToPixel.h  Figure.h  Intro.cpp  Intro.h  PlatonicBodies.cpp  PlatonicBodies.h  README.md  coordToPixel.h  engine.cc  intro.h
LSystems/: 2DLSystem.h  3DLSystem.cpp  3DLSystem.h
ini/TrafficSimulation/: car001.ini
ini/l_systems/: grass_stochastic.L2D  l_systems028.ini  snowflake_triangle_stochastic.L2D
ini/traffic_simulation/: road001.ini
l_systems/: filelist  l_systems027.ini
utils/: Figure.h  PlatonicBodies.h  Transformation.h  Utils.cpp  Utils.h  ZBuffer.h  easy_image.cc  easy_image.h
